kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework
  labels:
    name: nginx
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          command: ["/bin/sh","-c"]
          args: ["sed -i 's/listen .*/listen 8000;/g ; s,root .*,root /homework;,g' /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"]
          ports:
          - containerPort: 8000
          volumeMounts:
          - name: pv-nginx
            mountPath: "/homework"
          - name: configmap-nginx
            mountPath: "/homework/conf"
          lifecycle:
            preStop:
              exec:
                command: ["rm", "-f", "/homework/index.html"]
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
      dnsPolicy: Default
      volumes:
      - name: pv-nginx
        persistentVolumeClaim:
          claimName: pvc-nginx
      - name: configmap-nginx
        configMap:
          name: cm-nginx
          items:
            - key: file
              path: file
      nodeSelector:
        homework: "true"
